--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -105,12 +105,15 @@ html {
 .section-1 {
     background-color: white;
     background-image: url(../images/section-1/section-1-background.png);
+    position: relative;
 }
 
 
 .swiper-0 {
     display: flex;
     padding: 0;
+    z-index: 0;
+    margin-bottom: 16px;
 }
 
 .swiper-0-wrapper {
@@ -158,6 +161,13 @@ html {
     color: white !important;
     font-size: 14px;
     font-weight: 500;
+}
+.section-1-background-2{
+    position: absolute;
+    max-width: 50%;
+    bottom: -5%;
+    right: 0;
+    z-index: 1;
 }
 
 
