--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -986,6 +986,15 @@ html {
     transform: rotate(-45deg);
 }
 
+.footer-1 .row-1-socials .btn-social{
+    color: var(--background-color);
+    background-color: #ffffff1a;
+    margin-inline: 8px;
+    border-radius: 24px;
+    min-width: 36px;
+
+}
+
 .footer-1 .row-2-logo img {
     max-width: 227px;
 }
