--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -110,7 +110,9 @@ html {
 .navbar-number {
     font-size: x-small;
 }
-
+.navbar-section-2{
+    margin-left: -20px;
+}
 
 /* Section 1 */
 .section-hero {
