progress bar color change in section-services

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -371,7 +371,9 @@ html {
 
 .swiper-pagination1 {
     position: relative;
+    background-color: var(--accent-color);
 }
+
 
 .swiper-pagination .swiper-pagination-progressbar-fill{
     background-color: var(--secondary-color);
