--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -82,7 +82,7 @@ html {
     width: 95%;
     background-color: var(--secondary-color);
     position: absolute;
-    left: 0;
+    left: -5px;
     top: 0;
     border-radius: 0px 12px 0px 0px;
     transform: skewX(28deg);
