--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -11,8 +11,9 @@ html {
     /* Optional: overflow-y: auto; to allow vertical scrolling if needed */
 }
 
-.smallhead{
+.smallhead {
     font-weight: 500;
+    font-size: 16px;
     color: var(--primary-light-color);
 }
 
@@ -20,7 +21,7 @@ html {
     color: var(--secondary-color);
 }
 
-.mainhead{
+.mainhead {
     color: var(--text-color);
     font-weight: 600;
 }
@@ -89,7 +90,7 @@ html {
     position: relative;
 }
 
-.navbar-section-1::before{
+.navbar-section-1::before {
     content: " ";
     display: inline-block;
     height: 100%;
@@ -124,7 +125,13 @@ html {
 .navbar-number {
     font-size: x-small;
 }
-.navbar-section-2{
+
+.navbar-number .navbar-title {
+    color: var(--card-read-more);
+    font-weight: 800;
+}
+
+.navbar-section-2 {
     margin-left: -20px;
 }
 
@@ -135,6 +142,27 @@ html {
     position: relative;
 }
 
+.section-hero .swiper-button-prev {
+    background-image: url(../images/section-1/prev-slide-btn.png) !important;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    background-position: center;
+}
+
+.section-hero .swiper-button-next {
+    background-image: url(../images/section-1/next-slide-btn.png) !important;
+    background-repeat: no-repeat;
+    background-size: 100% auto;
+    background-position: center;
+}
+
+.section-hero .swiper-button-next::after {
+    display: none;
+}
+
+.section-hero .swiper-button-prev::after {
+    display: none;
+}
 
 .swiper-0 {
     display: flex;
@@ -152,8 +180,9 @@ html {
     font-weight: 700;
 }
 
-.section-hero .desc{
+.section-hero .desc {
     font-weight: 500;
+    color: var(--card-read-more);
 }
 
 .section-1-images {
@@ -263,7 +292,7 @@ html {
     color: var(--accent-color);
 }
 
-.section-aboutus .image-collage .collage-img1 .image{
+.section-aboutus .image-collage .collage-img1 .image {
     max-width: 60% !important;
 }
 
@@ -275,9 +304,17 @@ html {
     right: 18%;
 }
 
+.section-aboutus .smallhead::before{
+    content: url('../images/section-3/shield-tick.png');
+    position: relative;
+    align-items: center;
+    max-height: 100%;
+    max-width: auto;
+}
+
 .section-aboutus .description {
     color: var(--primary-light-color);
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .section-aboutus .feature .feature-icon {
@@ -289,7 +326,7 @@ html {
 }
 
 .section-aboutus .feature .feature-description {
-    font-weight: 600;
+    font-weight: 400;
     color: var(--primary-light-color);
 }
 
@@ -304,7 +341,7 @@ html {
     color: var(--primary-color);
 }
 
-.section-aboutus .points .point-text::before{
+.section-aboutus .points .point-text::before {
     content: url('../images/section-3/tick-icon.png');
     position: relative;
     align-items: center;
@@ -336,6 +373,14 @@ html {
     margin-top: 120px;
 }
 
+.section-services .smallhead::before{
+    content: url('../images/section-3/shield-tick.png');
+    position: relative;
+    align-items: center;
+    max-height: 100%;
+    max-width: auto;
+}
+
 .swiper-1 {
     display: flex;
     margin-top: 60px;
@@ -365,9 +410,10 @@ html {
 }
 
 
-.swiper-pagination .swiper-pagination-progressbar-fill{
+.swiper-pagination .swiper-pagination-progressbar-fill {
     background-color: var(--secondary-color);
 }
+
 .section-services .card-list .card-item {
     max-width: calc(100% / 3);
     border-radius: 22px;
@@ -418,8 +464,9 @@ html {
 
 }
 
-.section-services .card-list .card-item .card .card-body .card-text{
-    font-weight: 500;
+.section-services .card-list .card-item .card .card-body .card-text {
+    font-weight: 400;
+    color: var(--card-read-more);
 }
 
 .section-services .card-list .card-item .card .background-design {
@@ -514,6 +561,14 @@ html {
     color: var(--secondary-color);
 }
 
+.section-whychooseus .smallhead::before{
+    content: url('../images/section-3/shield-tick.png');
+    position: relative;
+    align-items: center;
+    max-height: 100%;
+    max-width: auto;
+}
+
 .section-whychooseus .mainhead {
     color: var(--background-color);
 }
@@ -548,16 +603,14 @@ html {
     font-weight: 400;
 }
 
-.section-whychooseus .feature-section .feature-image{
+.section-whychooseus .feature-section .feature-image {
     max-width: 20%;
     position: absolute;
     bottom: 10%;
     right: 35%;
 }
 
-.section-whychooseus .discover button{
-
-}
+.section-whychooseus .discover button {}
 
 
 
@@ -597,9 +650,18 @@ html {
     margin-top: 120px;
 }
 
-.section-testomonial .card-list{
+.section-testomonial .smallhead::before{
+    content: url('../images/section-3/shield-tick.png');
+    position: relative;
+    align-items: center;
+    max-height: 100%;
+    max-width: auto;
+}
+
+.section-testomonial .card-list {
     overflow: visible;
 }
+
 .section-testomonial .card-item {
     width: calc(90% / 2) !important;
     position: relative;
@@ -607,7 +669,7 @@ html {
     margin-inline: 4%;
 }
 
-.section-testomonial .card{
+.section-testomonial .card {
     border: 0;
     width: 100%;
     height: 100%;
@@ -631,7 +693,7 @@ html {
     font-size: 18px;
 }
 
-.section-testomonial .card-item .card .card-post{
+.section-testomonial .card-item .card .card-post {
     font-size: 14px;
     color: var(--secondary-color);
 }
@@ -660,13 +722,28 @@ html {
     background-color: #f7f7f7;
     background-image: url('../images/section-8/section-background.png');
     position: relative;
-    
+
 }
 
 .section-estimation .smallhead {
     margin-top: 120px;
+    z-index: 1;
+    position: relative;
 }
 
+.section-estimation .smallhead::before{
+    content: url('../images/section-3/shield-tick.png');
+    position: relative;
+    align-items: center;
+    max-height: 100%;
+    max-width: auto;
+}
+
+.section-estimation .mainhead{
+    z-index: 1;
+    position: relative;
+}
+ 
 .section-estimation .section-background-img {
     background-image: url('../images/section-8/section-half-bg.png');
     height: 100%;
@@ -680,17 +757,20 @@ html {
     z-index: 0;
 
 }
+
 .nav-tabs {
     border: 0px;
     margin-left: -2px;
 }
+
 .nav-link {
     background-color: var(--background-color);
     border-radius: 0px 36px 0px 0px !important;
     font-weight: 500;
     padding: 24px 32px 24px 32px;
 }
-.nav-item{
+
+.nav-item {
     z-index: 2;
 }
 
@@ -699,14 +779,16 @@ html {
     color: var(--primary-light-color);
     text-align: center;
 }
-.nav-tabs .nav-link::before{
+
+.nav-tabs .nav-link::before {
     content: "•";
     color: var(--primary-light-color);
     font-size: 20px;
     padding-inline: 4px;
     height: 100%;
 }
-.nav-tabs .nav-link.active::before{
+
+.nav-tabs .nav-link.active::before {
     color: var(--background-color);
 }
 
@@ -735,7 +817,7 @@ html {
     font-weight: 500;
 }
 
-.section-estimation .tab-content .tab-body .form-control{
+.section-estimation .tab-content .tab-body .form-control {
     background-color: #f5f5f5;
     border: 0px;
     padding: 16px 20px;
@@ -744,7 +826,7 @@ html {
     color: var(--text-color);
 }
 
-.section-estimation .tab-content .tab-body .form-select{
+.section-estimation .tab-content .tab-body .form-select {
     background-color: #f5f5f5;
     border: 0px;
     padding: 16px 20px;
@@ -752,7 +834,7 @@ html {
     font-weight: 500;
 }
 
-.section-estimate .tab-pane .tab-body .tab-title{
+.section-estimate .tab-pane .tab-body .tab-title {
     font-weight: 800;
 }
 
@@ -768,6 +850,14 @@ html {
 
 .section-team .smallhead {
     margin-top: 120px;
+}
+
+.section-team .smallhead::before{
+    content: url('../images/section-3/shield-tick.png');
+    position: relative;
+    align-items: center;
+    max-height: 100%;
+    max-width: auto;
 }
 
 .swiper-4 {
@@ -791,7 +881,7 @@ html {
 
 .section-team .card-list .card-item .card .card-img-top {
     border-radius: 22px 22px 0px 0px;
-    max-width: 100%;
+    max-height: 100%;
 }
 
 .section-team .card-list .card-item .card .button-share {
@@ -824,6 +914,14 @@ html {
     margin-top: 120px;
 }
 
+.section-articles .smallhead::before{
+    content: url('../images/section-3/shield-tick.png');
+    position: relative;
+    align-items: center;
+    max-height: 100%;
+    max-width: auto;
+}
+
 .article-slides {
     max-width: calc(90% /3);
 }
@@ -847,7 +945,7 @@ html {
 }
 
 
-.section-articles  .article-date {
+.section-articles .article-date {
     position: absolute;
     background-color: var(--background-color);
     top: -15%;
@@ -857,11 +955,11 @@ html {
     max-width: 15%;
 }
 
-.section-articles  .article-date .date-month {
+.section-articles .article-date .date-month {
     font-size: 14px;
 }
 
-.section-articles  .article-date .date-day {
+.section-articles .article-date .date-day {
     font-weight: 500;
 }
 
@@ -931,7 +1029,7 @@ html {
     transform: rotate(-45deg);
 }
 
-.footer-1 .row-1-socials .btn-social{
+.footer-1 .row-1-socials .btn-social {
     color: var(--background-color);
     background-color: #ffffff1a;
     margin-inline: 8px;
