--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -74,7 +74,7 @@ html {
     color: var(--text-color);
     background-color: var(--background-color);
     border: none;
-    font-weight: 500;
+    font-weight: 400;
     font-size: 0.8rem;
     border-radius: 8px;
 }
@@ -145,15 +145,17 @@ html {
 .section-hero .swiper-button-prev {
     background-image: url(../images/section-1/prev-slide-btn.png) !important;
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-size: 70% auto;
     background-position: center;
+    margin-right: 20px;
 }
 
 .section-hero .swiper-button-next {
     background-image: url(../images/section-1/next-slide-btn.png) !important;
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-size: 70% auto;
     background-position: center;
+    margin-left: 20px;
 }
 
 .section-hero .swiper-button-next::after {
@@ -192,18 +194,9 @@ html {
 
 .section-1-btn {
     position: relative;
-    right: 0;
-    top: 0;
-    margin: 0;
-    left: 0;
-    scale: 0.5;
+    justify-content: center;
     padding: 40px;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    background-color: var(--background-color);
-    color: var(--text-color);
-    border: 1px solid rgb(172, 172, 172);
+    border-radius: 100%;
 }
 
 .section-hero .discover-button {
