--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -1,7 +1,8 @@
 @import url(../values/color.css);
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --bs-body-font-family: 'Roboto', sans-serif;
+    --bs-body-font-family: 'Manrope', sans-serif;
 }
 
 body,
@@ -55,9 +56,10 @@ html {
 
 .top-bar .topbar-section-1 .topbar-info {
     color: var(--primary-light-color);
-    font-weight: 600;
+    font-weight: 700;
     font-size: 14px;
     z-index: 1;
+    padding-left: 30px;
 }
 
 .top-bar .topbar-section-1 .topbar-info i {
@@ -74,8 +76,9 @@ html {
     color: var(--text-color);
     background-color: var(--background-color);
     border: none;
-    font-weight: 400;
-    font-size: 0.8rem;
+    padding: 12px 4px;
+    font-weight: 600;
+    font-size: 0.875rem;
     border-radius: 8px;
 }
 
@@ -94,24 +97,28 @@ html {
     content: " ";
     display: inline-block;
     height: 100%;
-    width: 95%;
+    width: 98%;
     background-color: var(--secondary-color);
     position: absolute;
-    left: -5px;
+    left: -10px;
     top: 0;
     border-radius: 0px 12px 0px 0px;
     transform: skewX(28deg);
     z-index: -1;
 }
 
+.navbar-section-logo{
+    margin-inline: 20px;
+}
 .navbar-logo {
-    max-height: 80px;
-    margin-top: -20px;
+    max-height: 130%;
+    margin-top: -25px;
 }
 
 .btn-nav {
     color: var(--accent-color);
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 700;
 }
 
 .navbar-section-useful {
@@ -123,12 +130,14 @@ html {
 }
 
 .navbar-number {
-    font-size: x-small;
+    font-size: 16px;
+    font-weight: 700;
 }
 
 .navbar-number .navbar-title {
     color: var(--card-read-more);
-    font-weight: 800;
+    font-weight: 700;
+    font-size: 12px;
 }
 
 .navbar-section-2 {
@@ -179,6 +188,7 @@ html {
 }
 
 .section-hero .head {
+    font-size: 4.375rem;
     font-weight: 700;
 }
 
@@ -985,19 +995,19 @@ html {
 .footer-1 {
     background-color: var(--primary-color);
     margin-top: 120px;
-    padding: 30px;
+    padding: 120px 30px;
     position: relative;
     overflow: hidden;
     z-index: 1;
 }
 
 .footer-1 .gallary-images img {
-    max-width: 50px;
+    max-width: 98px;
     border-radius: 8px;
 }
 
 .footer-1 .gallary-images {
-    max-width: 50px;
+    max-width: 98px;
     margin: 8px;
 }
 
@@ -1009,7 +1019,8 @@ html {
 
 .footer-1 .row-1-desc {
     color: var(--primary-light-color);
-    font-weight: 500;
+    font-weight: 700;
+    font-size: 18px;
 }
 
 .footer-1 .row-1-inputfield {
@@ -1045,27 +1056,29 @@ html {
     background-color: #ffffff1a;
     margin-inline: 8px;
     border-radius: 24px;
-    min-width: 36px;
-
+    min-width: 38px;
 }
 
 .footer-1 .row-2-logo img {
     max-width: 227px;
+    margin-top: -20px;
 }
 
 .footer-1 .row-2-addressbox {
     background-color: #ffffff1a;
     font-weight: 500;
     color: var(--primary-light-color);
-    border-radius: 12px 12px 0px 0px;
+    border-radius: 20px 20px 0px 0px;
     margin-top: -20px;
+    max-width: 370px;
     border-bottom: 2px solid #ffffff2a;
 }
 
 .footer-1 .row-2-contactbox {
     background-color: #ffffff1a;
-    border-radius: 0px 0px 12px 12px;
+    border-radius: 0px 0px 20px 20px;
     font-weight: 500;
+    max-width: 370px;
     color: var(--primary-light-color);
 }
 
@@ -1078,10 +1091,17 @@ html {
     color: var(--secondary-color);
     border-radius: 100%;
     padding: 6px;
+    scale: 1.6;
 }
 
 .footer-1 .row-2-text {
     font-size: 16px;
+    font-weight: 600;
+}
+
+.footer-1 .row-2-contact-text{
+    font-size: 12px;
+    font-weight: 700;
 }
 
 .footer-1 .row-3-title {
