--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -13,7 +13,7 @@ html {
 }
 
 .smallhead {
-    font-weight: 500;
+    font-weight: 700;
     font-size: 16px;
     color: var(--primary-light-color);
 }
@@ -24,7 +24,8 @@ html {
 
 .mainhead {
     color: var(--text-color);
-    font-weight: 600;
+    font-weight: 800;
+    font-size: 2.5rem;
 }
 
 .top-bar {
@@ -252,6 +253,7 @@ html {
 
 .section-features .card .card-title {
     font-size: 1.5rem;
+    font-weight: 700;
 }
 
 .section-features .card .card-body .card-img-top {
@@ -259,14 +261,15 @@ html {
 }
 
 .section-features .card .card-body .card-text {
-    font-size: 1.1rem;
+    font-size: 1rem;
     line-height: 2.15rem;
+    font-weight: 600;
     color: var(--primary-light-color);
 
 }
 
 .section-features .card-center .card-text {
-    color: var(--background-color6) !important;
+    color: var(--accent-color) !important;
 }
 
 
@@ -287,12 +290,14 @@ html {
 }
 
 .section-aboutus .box1-title {
-    font-weight: 600;
+    font-weight: 800;
+    font-size: 40px;
     color: var(--background-color);
 }
 
 .section-aboutus .box1-text {
-    font-weight: 500;
+    font-weight: 800;
+    font-size: 20px;
     color: var(--accent-color);
 }
 
@@ -318,7 +323,7 @@ html {
 
 .section-aboutus .description {
     color: var(--primary-light-color);
-    font-weight: 400;
+    font-weight: 600;
 }
 
 .section-aboutus .feature .feature-icon {
@@ -330,7 +335,7 @@ html {
 }
 
 .section-aboutus .feature .feature-description {
-    font-weight: 400;
+    font-weight: 600;
     color: var(--primary-light-color);
 }
 
@@ -338,7 +343,7 @@ html {
 .section-aboutus .points {
     border: 2px solid var(--accent-color);
     border-radius: 12px;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 .section-aboutus .points .point-text {
@@ -358,8 +363,8 @@ html {
 .section-aboutus .discover-button button {
     background-color: var(--primary-color);
     color: white !important;
-    font-size: 14px;
-    font-weight: 500;
+    font-size: 16px;
+    font-weight: 700;
 }
 
 
